Set tox_constraints_file for cross-jobs
In the follow-on job I268fb7e1dc753c82983736572b3df2f152f8cf51 I have
modified upper-constraints.txt but it seems like the cross-horizon-npm
is still trying to use the constraints from releases.openstack.org, so
not picking up the change in the gate.

It seems that horizon calls "tox -e npm" as part of it's npm magic,
but doesn't use the checked-out version of upper-constraints.txt.

The dependent patch uses tox_constraints_file to set
UPPER_CONSTRAINTS_FILE, which should hopefully pick up the right
installation candidates.

This should allow the job to become voting again.

Depends-On: https://review.opendev.org/709414
Change-Id: Id9a465bd106940a1e286e8090be2186becc1c9f0

--- a/.zuul.d/cross-jobs.yaml
+++ b/.zuul.d/cross-jobs.yaml
@@ -16,6 +16,7 @@
     nodeset: ubuntu-bionic
     vars:
       zuul_work_dir: "{{ (zuul.projects.values() | selectattr('required') | selectattr('name', 'match', '^(?!openstack/requirements)') | list)[0].src_dir }}"
+      tox_constraints_file: "{{ ansible_user_dir }}/{{ zuul.projects['opendev.org/openstack/requirements'].src_dir }}/upper-constraints.txt"
     files:
       - upper-constraints.txt
       - .zuul.d/cross-jobs.yaml
@@ -37,6 +38,7 @@
          Use the specified tox environments (``ALL`` selects all).
     vars:
       zuul_work_dir: "{{ (zuul.projects.values() | selectattr('required') | selectattr('name', 'match', '^(?!openstack/requirements)') | list)[0].src_dir }}"
+      tox_constraints_file: "{{ ansible_user_dir }}/{{ zuul.projects['opendev.org/openstack/requirements'].src_dir }}/upper-constraints.txt"
     files:
       - upper-constraints.txt
       - .zuul.d/cross-jobs.yaml
