Set UPPER_CONSTRAINTS_FILE for cross jobs
In the follow-on job I268fb7e1dc753c82983736572b3df2f152f8cf51 I have
modified upper-constraints.txt but it seems like the cross-horizon-npm
is still trying to use the constraints from releases.openstack.org, so
not picking up the change in the gate.

Set UPPER_CONSTRAINTS_FILE which this job should obey to use the Zuul
checked out version.

[1] https://opendev.org/openstack/horizon/src/commit/e515713084f0ce5d7874ffe4ef080fcc2e5760cb/tox.ini#L23

Change-Id: Id9a465bd106940a1e286e8090be2186becc1c9f0

--- a/.zuul.d/cross-jobs.yaml
+++ b/.zuul.d/cross-jobs.yaml
@@ -16,6 +16,8 @@
     nodeset: ubuntu-bionic
     vars:
       zuul_work_dir: "{{ (zuul.projects.values() | selectattr('required') | selectattr('name', 'match', '^(?!openstack/requirements)') | list)[0].src_dir }}"
+    environment:
+      UPPER_CONSTRAINTS_FILE: "{{ ansible_user_dir }}/{{ zuul.projects['opendev.org/openstack/requirements'].src_dir }}/upper-constraints.txt"
     files:
       - upper-constraints.txt
       - .zuul.d/cross-jobs.yaml
