Reenable cross-horizon-npm job
Change-Id: I137f121fd6614d2edee454a96c85479c66658639
Signed-off-by: Sean McGinnis <sean.mcginnis@gmail.com>

--- a/.zuul.d/project.yaml
+++ b/.zuul.d/project.yaml
@@ -22,8 +22,7 @@
         - cross-cinder-py36
         - cross-glance-py36
         - cross-horizon-py36
-        - cross-horizon-npm:
-            voting: false
+        - cross-horizon-npm
         - cross-keystone-py36
         - cross-neutron-py36
         - cross-nova-py36
@@ -65,6 +64,7 @@
         - cross-cinder-py36
         - cross-glance-py36
         - cross-horizon-py36
+        - cross-horizon-npm
         - cross-keystone-py36
         - cross-neutron-py36
         - cross-nova-py36:
