DNM testing gerrit headers
Change-Id: Iddfac186bc510e68892dccadf52ae6e30640fa52

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = openstack_requirements
-summary = OpenStack python dependency management tools
+summary = OpenStack python dependency management
 description-file =
     README.rst
 author = OpenStack
