--- a/.zuul.d/cross-jobs.yaml
+++ b/.zuul.d/cross-jobs.yaml
@@ -14,6 +14,7 @@
 
          Use the specified tox environments (``ALL`` selects all).
     nodeset: ubuntu-bionic
+    pre-run: playbooks/fix-venv.yaml
     vars:
       zuul_work_dir: "{{ (zuul.projects.values() | selectattr('required') | selectattr('name', 'match', '^(?!openstack/requirements)') | list)[0].src_dir }}"
     files:
